# MorseGraph

./: .gitignore  CLAUDE.md  GEMINI.md  Morse Graph.md  README.md  TODO.md  pyproject.toml  requirements.txt  setup.py
MorseGraph/: __init__.py  analysis.py  config.py  core.py  dynamics.py  grids.py  instructions.md  models.py  pipeline.py  plot.py  suggestions.md  systems.py  training.py  utils.py
cmgdb/: CMGDB_3D_FEATURES.md  README.md  instructions.md
examples/: 1_map_dynamics.ipynb  1_map_dynamics.py  2_data_driven.py  2_ode_dynamics.py  3_adaptive_refinement.py  3_ode_dynamics.py  4_adaptive_refinement.ipynb  4_adaptive_refinement.py  4_data_driven.py  5_learned_dynamics.ipynb  5_learned_dynamics.py  6_map_learned_dynamics.py  6_simple_data_driven.py  7_ives_model.py  7_ives_model_NOTES.md  7_multiple_runs.py  8_leslie_map_3d.py  EXPERIMENTS_README.md  README.md  README_IVES_MODEL.md  cmgdb_multiple_runs.py  cmgdb_single_run.py
examples_py/: 1_map_dynamics.py  2_data_driven.py  3_ode_dynamics.py  4_adaptive_refinement.py  5_learned_dynamics.py  README.md
ives_model/: 1_compute_morse_graph.py  2_run_experiment.py  3_run_multiple.py  4_load_run.py  evaluate_equilibrium_box.py  find_equilibrium.py  test.py
leslie_map_3d/: 1_compute_ground_truth.py  2_run_experiment.py  3_run_sweep.py  4_load_run.py
morals/: instructions.md
morsegraph.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
notebooks/: 1_map_dynamics.ipynb  2D_LeslieModel.ipynb  2_data_driven.ipynb  3D_IvesModel.ipynb  3D_LeslieModel.ipynb  3_ode_dynamics.ipynb  SingleCMG_statistics.txt  morse.csv
(+1325 files in other folders)
