[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "morsegraph"
version = "0.1.0"
description = "A lightweight library for Morse graph analysis of dynamical systems."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "scipy",
    "networkx",
    "matplotlib",
    "joblib",
]

[project.optional-dependencies]
ml = [
    "torch",
    "scikit-learn",
]
test = [
    "pytest",
]

[tool.setuptools]
packages = ["MorseGraph"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
